--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
