--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/splide": "^4.1.4",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "jspdf": "^2.5.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
